--- a/src/hoc/Layout/Layout.module.scss
+++ b/src/hoc/Layout/Layout.module.scss
@@ -20,6 +20,7 @@ $colorBg: #ffeead;
     }
     footer {
         grid-area: f;
-        align-self: center;
+        text-align: center;
+        width: 100%
     }
 }
