--- a/src/components/Navigation/Toolbar/Toolbar.module.scss
+++ b/src/components/Navigation/Toolbar/Toolbar.module.scss
@@ -1,4 +1,14 @@
-$colorBg: #247BA0;
+$colorBg: #EAE2B7;
 .Toolbar {
     background-color: $colorBg;
+    .DesktopOnly {
+        display: flex;
+        justify-content: space-between;
+        .Logo {
+            flex-grow: 1;
+            img {
+                max-height: 50px;
+            }
+        }
+    }
 }
