--- a/src/containers/ItemFrom/ItemFrom.module.scss
+++ b/src/containers/ItemFrom/ItemFrom.module.scss
@@ -1,3 +1,20 @@
 .ItemForm {
-    padding: 10px 20px;
+    margin: 20px auto;
+    width: 80%;
+    text-align: center;
+    box-shadow: 0 2px 3px #ccc;
+    border: 1px solid #eee;
+    padding: 10px;
+    box-sizing: border-box;
+    
+    @media (min-width: 600px) {
+        width: 500px;
+    }
+    
+    button {
+        background: #3F51B5;
+        color: #fff;
+        font-size: 15px;
+        padding: 10px 20px;
+    }
 }
