--- a/src/components/Forms/formfields.module.scss
+++ b/src/components/Forms/formfields.module.scss
@@ -9,7 +9,9 @@
         text-align: left;
     }
 
-    input[type="text"] {
+    input[type="text"],
+    input[type="email"],
+    input[type="password"] {
         width: 100%;
         font-size: 1.1rem;
         padding: 8px 12px;
@@ -27,10 +29,16 @@
     }
 
     label[for="image_input"] {
+        text-align: center;
+        padding: 7px 12px;
+        border: 2px solid #ccc;
         font-size: 1.1rem;
         background: #3F51B5;
         color: #fff;
-        cursor: pointer;        
+        cursor: pointer;      
+        span {
+            margin-right: 10px;
+        }  
     }    
 
     select {
@@ -48,6 +56,11 @@
     .label_error {
         color: #FF5722;
         font-weight: 600;
-        margin-top: 10px;
+        margin-top: 5px;
+        text-align: left;
+    }
+
+    img {
+        width: 100%;
     }
 }
