--- a/src/components/Forms/formfields.module.scss
+++ b/src/components/Forms/formfields.module.scss
@@ -11,6 +11,7 @@
 
     input[type="text"],
     input[type="email"],
+    input[type="tel"],
     input[type="password"] {
         width: 100%;
         font-size: 1.1rem;
