--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
@@ -1,13 +1,44 @@
 $colorBg: #FCBF49;
+$colorCoorp: #73A404;
 $colorText: #FFF;
 
+@mixin active_link {
+    //background-color: #8F5C2C;
+    border-bottom: 3px solid darken($colorCoorp, 10%);
+}
+
 .NavigationItem {
-    //flex-grow: 1;
+    
     list-style-type: none;
     a {
         text-decoration: none;
-        padding: 5px;
-        color: $colorText;
-        background-color: $colorBg;
+        box-sizing: border-box;
+        display: block;
+        width: 100%;
+    }
+
+    @media (min-width: 500px) {
+        
+        margin: 0;
+        flex-grow: 1;
+        width: auto;
+
+        a {
+            color: $colorText;
+            height: 100%;            
+            padding-top: 20px;
+            border-bottom: 3px solid transparent;
+            text-align: center;
+        
+            &:hover, &:active{
+                @include active_link;
+                background-color: darken($colorCoorp, 10%);
+            }  
+            
+        }
+
+        .active {
+            @include active_link;
+        } 
     }
 }
