--- a/src/components/Navigation/NavigationItems/NavigationItems.module.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.scss
@@ -2,5 +2,12 @@
     flex-grow: 4;
     display: flex;
     padding: 0;
-    justify-content: space-evenly;
+    flex-flow: column;
+    //justify-content: space-evenly;
+
+    @media (min-width: 500px) {
+        flex-flow: row;
+        height: 100%;
+        margin: 0;   
+    }
 }
