--- a/src/containers/Auth/Auth.module.scss
+++ b/src/containers/Auth/Auth.module.scss
@@ -1,3 +1,4 @@
+$colorCoorp: #73A404;
 .Auth {
     margin: 20px auto;
     width: 80%;
@@ -5,6 +6,7 @@
     box-shadow: 0 2px 3px #ccc;
     border: 1px solid #eee;
     padding: 10px;
+    background-color: #fff;
     box-sizing: border-box;
     
     @media (min-width: 600px) {
@@ -12,10 +14,13 @@
     }
     
     button {
-        background: #3F51B5;
+        background: #0E4749;
         color: #fff;
         font-size: 15px;
         padding: 10px 20px;
+        &:hover {
+            background: #002626;
+        }
     }
     .AuthFrom_signin {
 
