--- a/src/components/UI/Spinner/Spinner.module.scss
+++ b/src/components/UI/Spinner/Spinner.module.scss
@@ -1,6 +1,8 @@
+$colorCoorp: #73A404;
+
 .Loader {
     border-radius: 50%;
-    color: #541751;
+    color: $colorCoorp;
     font-size: 11px;
     text-indent: -99999em;
     margin: 55px auto;
