--- a/src/containers/Items/Items.module.scss
+++ b/src/containers/Items/Items.module.scss
@@ -1,6 +1,20 @@
 .Items {
     display: grid;   
-    grid-template-columns: 1fr 1fr 1fr 1fr; 
+    grid-template-columns: 1fr 1fr; 
     grid-gap: 20px;
     margin: 30px 15%;
+
+    @media (min-width: 768px) { 
+        display: grid;   
+        grid-template-columns: 1fr 1fr 1fr; 
+        grid-gap: 20px;
+        margin: 30px 15%;
+    }
+
+    @media (min-width: 992px) {
+        display: grid;   
+        grid-template-columns: 1fr 1fr 1fr 1fr; 
+        grid-gap: 20px;
+        margin: 30px 15%;
+    }
 }
