--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
@@ -42,7 +42,7 @@ $colorText: #FFF;
         a {
             color: $colorText;
             height: 100%;            
-            padding-top: 20px;
+            padding: 20px 0 0 0;
             border-bottom: 3px solid transparent;
             text-align: center;
         
