--- a/src/components/Navigation/Toolbar/Toolbar.module.scss
+++ b/src/components/Navigation/Toolbar/Toolbar.module.scss
@@ -12,6 +12,7 @@ $colorCoorp: #73A404;
         height: 100%;
         display: flex;
         align-items: center;
+        justify-content: center;
 
         img {
             max-height: 50px;
