--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,6 +4,9 @@ $colorText: #FFF;
 .Footer {
     background-color: $colorCoorp;
     color: $colorText;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     div {
         padding: 10px;
     }
